--- a/Sysong/Views/Home/Index.cshtml
+++ b/Sysong/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <div class="col s12">
-                <a class="btn-large waves-effect waves-light grey lighten-5 blue-text " href="{{route('login')}}">
+                <a class="btn-large waves-effect waves-light grey lighten-5 blue-text " asp-controller="Account" asp-action="Index">
                     <b>Login</b>
                     <i class="material-icons blue-text right ">person</i>
                 </a>
