--- a/Sysong/Views/Shared/_Layout.cshtml
+++ b/Sysong/Views/Shared/_Layout.cshtml
@@ -92,14 +92,14 @@
                         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                         <ul class="right hide-on-med-and-down">
                             <li><a href="/">Home</a></li>
-                            <li><a href="#">Login</a></li>
+                            <li><a asp-controller="Account" asp-action="Index">Login</a></li>
                         </ul>
                     </div>
 
 
                     <ul class="sidenav" id="mobile-demo">
                         <li><a href="/">Home</a></li>
-                        <li><a href="{{route('login')}}">Login</a></li>
+                        <li><a asp-controller="Account" asp-action="Index">Login</a></li>
                     </ul>
                 }
             </div>
